Checkpoint, find errors, Methods 1

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,16 +1,8 @@
-/Cup.class
-/Kettle$Water.class
-/Kettle.class
-/Microwave.class
-/MinionTest.class
-/Popcorn.class
-/Recipes.html
-/TeaBag.class
-/TeaMaker.class
-/extra/
-/minion.class
-/Tea.class
-/TeaParty.class
-/TeaPartyTest.class
-/Methods1.class
-/DrawSquare.class
+/Noodle.class
+/Checkpoint.class
+/Bacon.class
+/HauntedHouse.class
+/Hell.class
+/Narwhal.class
+/Ninja.class
+/Unicorn.class
